# kivyPyInstaller

./: .gitignore  KIVYWINDOWAPP.spec  LICENSE  mainOLD.spec  onefileKivy.spec  pyproject.toml  testAPP.py  what i did.txt
